testdata/tests/cases/compiler/tluaNumberKeyDiagnosticDisplay.tlua
// @strict: true
// @noEmit: true

// A number key must render as its decimal text in diagnostics, never as the
// internal "\xFEn:" mangled symbol name.

// A duplicate number key is reported as '1', not as a mangled name. (This used
// to be exercised through a spread override, `{ [1] = "a", ...src }`; table spread
// is gone, so the duplicate is written directly.)
local dup = { [1] = "a", [1] = "b" }; // error: duplicate '1'

// A missing number-key element access displays the key as '1' (a mangled name
// must not reach the "Property ... does not exist" diagnostic).
interface Near { l: string }
declare n: Near;
local miss = n[1]; // error: Property '1' does not exist on type 'Near'

local es = {dup, miss};
